# denoisers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: python-package.yml
denoisers/: __init__.py  metrics.py  train.py  transforms.py  utils.py
denoisers/data/: __init__.py  waveunet.py
denoisers/datamodules/: unet.py  unet1d.py  waveunet.py
denoisers/datasets/: __init__.py  audio.py
denoisers/modeling/: __init__.py  modules.py
denoisers/modeling/unet/: model.py
denoisers/modeling/unet1d/: __init__.py  config.py  model.py  modules.py
denoisers/modeling/waveunet/: __init__.py  config.py  model.py
denoisers/scripts/train/: __init__.py  unet1d.py  waveunet.py
denoisers/testing/: __init__.py
docs/: generative_denoiser_proposal.md
src/: __init__.py
src/denoiser/: data.py  model.py  train.py  transforms.py  utils.py
src/denoiser/datasets/: __init__.py  vctk.py
src/denoiser/modeling/unet/: __init__.py  model.py
src/denoiser/modeling/waveunet/: __init__.py  model.py
src/denoisers/: __init__.py  datamodule.py  lightning_module.py  losses.py  metrics.py  transforms.py  utils.py
src/denoisers/datasets/: __init__.py  audio.py
src/denoisers/modeling/: __init__.py  modules.py
src/denoisers/modeling/flowunet1d/: __init__.py  config.py  model.py  modules.py
src/denoisers/modeling/unet1d/: __init__.py  config.py  model.py  modules.py
src/denoisers/modeling/waveunet/: __init__.py  config.py  model.py  modules.py
src/denoisers/scripts/: publish.py  train.py
src/denoisers/testing/: __init__.py
tests/: __init__.py  conftest.py  test_dummy.py  test_metrics.py  test_transforms.py
tests/datamodules/: __init__.py  test_unet_datamodule.py  test_waveunet_datamodule.py
tests/datasets/: __init__.py  test_audio.py
tests/modeling/: __init__.py  test_flowunet1d_model.py  test_lightning_module.py  test_modules.py  test_pretrained.py  test_unet1d_model.py  test_waveunet_model.py
