[build-system]
requires = [
    "setuptools>=78.1.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "denoisers"
version = "0.2.0"
authors = [
  { name="Will Rice", email="wrice20@gmail.com" },
]
description = "A package for training audio denoisers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mypy>=1.13.0",
    "pydocstyle>=6.3.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "wandb>=0.18.7",
    "matplotlib>=3.9.2",
    "pedalboard>=0.9.16",
    "pydub>=0.25.1",
    "pyroomacoustics>=0.8.2",
    "pre-commit>=4.0.1",
    "librosa>=0.10.2.post1",
    "audiomentations>=0.37.0",
    "onnxruntime>=1.20.1",
    "pesq>=0.0.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.48.0",
    "torchvision>=0.20.1",
    "pytorch-lightning>=2.5.0.post0",
]

[project.urls]
"Homepage" = "https://github.com/will-rice/denoisers"
"Bug Tracker" = "https://github.com/will-rice/denoisers/issues"

[tool.ruff.lint.isort]
known-first-party = ["denoisers"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N", "B"]
ignore = ["D107"]
exclude = [".venv"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports_for_stubs = true
strict = false
exclude = [".venv"]

[project.scripts]
train = "denoisers.scripts.train:main"
publish = "denoisers.scripts.publish:main"
