[build-system]
requires = [
    "setuptools>=78.1.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "denoisers"
version = "0.2.0"
authors = [
  { name="Will Rice", email="wrice20@gmail.com" },
]
description = "A package for training audio denoisers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mypy>=2.3.0",
    "pydocstyle>=6.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "wandb>=0.28.1",
    "matplotlib>=3.10.9",
    "pedalboard>=0.9.22,<0.9.23",  # 0.9.23/0.9.24 cp313 wheels SIGILL on CI runners
    "pydub>=0.25.1",
    "pyroomacoustics>=0.10.1",
    "pre-commit>=4.6.1",
    "librosa>=0.11.0",
    "audiomentations>=0.43.1",
    "onnxruntime>=1.24.3",
    "numpy>=2.0",
    "pesq>=0.0.4",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.15.0",
    "transformers>=5.4.0",
    "torchvision>=0.26.0",
    "pytorch-lightning>=2.6.5",
]

[project.urls]
"Homepage" = "https://github.com/will-rice/denoisers"
"Bug Tracker" = "https://github.com/will-rice/denoisers/issues"

[tool.ruff.lint.isort]
known-first-party = ["denoisers"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N", "B"]
ignore = ["D107"]
exclude = [".venv"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports_for_stubs = true
strict = false
exclude = [".venv"]

[project.scripts]
train = "denoisers.scripts.train:main"
publish = "denoisers.scripts.publish:main"
